force-app/main/default/objects/Vendor_Review__c/fields/Audit_Copies__c.field-meta.xml
<CustomField>
    <fullName>Audit_Copies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Audit Copies are needed, check the box.</description>
    <inlineHelpText>If Audit Copies are needed, check the box.</inlineHelpText>
    <label>Audit Copies Needed?</label>
    <type>Checkbox</type>
</CustomField>