force-app/main/default/objects/Vendor_Review__c/fields/Audit_Copies_Type__c.field-meta.xml
<CustomField>
    <fullName>Audit_Copies_Type__c</fullName>
    <description>If audit copies are needed, please fill in the type.</description>
    <inlineHelpText>If audit copies are needed, please fill in the type.</inlineHelpText>
    <label>Audit Copies Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>