force-app/main/default/objects/Vendor_Review__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <description>Date/time review was completed</description>
    <inlineHelpText>Date/time review was completed</inlineHelpText>
    <label>Completion Time</label>
    <type>DateTime</type>
</CustomField>