force-app/main/default/objects/Vendor_Review__c/fields/Confirmed_Review__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Review__c</fullName>
    <description>I affirm I have the reviewed the document(s) referenced herein and have either: (a) noted no exception with Ubiquity’s existing procedures and operations or, (b) have noted one or more exception(s)</description>
    <inlineHelpText>I affirm I have the reviewed the document(s) referenced herein and have either: (a) noted no exception with Ubiquity’s existing procedures and operations or, (b) have noted one or more exception(s)</inlineHelpText>
    <label>Confirmed Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Confirmed with exceptions</fullName>
                <isActive>false</isActive>
                <label>Confirmed with exceptions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>