force-app/main/default/objects/Vendor_Review__c/fields/End_Date_of_SOC__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_SOC__c</fullName>
    <description>Date SOC ends/expires</description>
    <inlineHelpText>Date SOC ends/expires</inlineHelpText>
    <label>End Date of SOC</label>
    <type>Date</type>
</CustomField>