force-app/main/default/objects/Vendor_Review__c/fields/Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid__c</fullName>
    <description>Fees paid to vendor</description>
    <inlineHelpText>Fees paid to vendor</inlineHelpText>
    <label>Fees Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>