force-app/main/default/objects/Vendor_Review__c/fields/Fees_Payable__c.field-meta.xml
<CustomField>
    <fullName>Fees_Payable__c</fullName>
    <description>Do we pay fees to this vendor?</description>
    <inlineHelpText>Do we pay fees to this vendor?</inlineHelpText>
    <label>Fees Payable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>