force-app/main/default/objects/Vendor_Review__c/fields/Fees_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Fees_Receivable__c</fullName>
    <description>Do we receive fees from this vendor?</description>
    <inlineHelpText>Do we receive fees from this vendor?</inlineHelpText>
    <label>Fees Receivable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>