force-app/main/default/objects/Vendor_Review__c/fields/Fees_Received__c.field-meta.xml
<CustomField>
    <fullName>Fees_Received__c</fullName>
    <description>Fees received from vendor</description>
    <inlineHelpText>Fees received from vendor</inlineHelpText>
    <label>Fees Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>