force-app/main/default/objects/Vendor_Review__c/fields/Financials__c.field-meta.xml
<CustomField>
    <fullName>Financials__c</fullName>
    <label>Financials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>