force-app/main/default/objects/Vendor_Review__c/fields/Insurance_Required_by_Ubiquity__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Required_by_Ubiquity__c</fullName>
    <description>Does Ubiquity require insurance for this vendor?</description>
    <inlineHelpText>Does Ubiquity require insurance for this vendor?</inlineHelpText>
    <label>Insurance Required by Ubiquity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>