force-app/main/default/objects/Vendor_Review__c/fields/Insurance_Required_by_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Required_by_Vendor__c</fullName>
    <description>Does the vendor require that we carry insurance?</description>
    <inlineHelpText>Does the vendor require that we carry insurance?</inlineHelpText>
    <label>Insurance Required by Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>