force-app/main/default/objects/Vendor_Review__c/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <description>Date invoice is due</description>
    <inlineHelpText>Date invoice is due</inlineHelpText>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>