force-app/main/default/objects/Vendor_Review__c/fields/Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period__c</fullName>
    <description>Timeframe for invoices</description>
    <inlineHelpText>Timeframe for invoices</inlineHelpText>
    <label>Invoice Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly and Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Annual with Quarterly True-Ups</fullName>
            </value>
            <value>
                <fullName>As Performed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>