force-app/main/default/objects/Vendor_Review__c/fields/Invoiced_Timelines__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Timelines__c</fullName>
    <label>Invoiced Timelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>