force-app/main/default/objects/Vendor_Review__c/fields/Link_to_Privacy_Policy_and_Other_Docs__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Privacy_Policy_and_Other_Docs__c</fullName>
    <description>Link to website for privacy policy, etc.</description>
    <inlineHelpText>Link to website for privacy policy, etc.</inlineHelpText>
    <label>Link to Privacy Policy and Other Docs</label>
    <type>Url</type>
</CustomField>