force-app/main/default/objects/Vendor_Review__c/fields/Month_of_Annual_Invoiced_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Annual_Invoiced_Timeline__c</fullName>
    <description>If Invoiced Timelines is &quot;Annual&quot;, indicate which month of the year the invoice is anticipated.</description>
    <inlineHelpText>If Invoiced Timelines is &quot;Annual&quot;, indicate which month of the year the invoice is anticipated.</inlineHelpText>
    <label>Month of Annual Invoiced Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>