force-app/main/default/objects/Vendor_Review__c/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <description>Do we have an NDA?</description>
    <inlineHelpText>Do we have an NDA?</inlineHelpText>
    <label>NDA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>