force-app/main/default/objects/Vendor_Review__c/fields/Number_of_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exceptions__c</fullName>
    <description>Enter the number of exceptions</description>
    <inlineHelpText>Enter the number of exceptions</inlineHelpText>
    <label>Number of Exceptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>