force-app/main/default/objects/Vendor_Review__c/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <description>Department of the owner of the record</description>
    <formula>Vendor_Owner__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Department of the owner of the record</inlineHelpText>
    <label>Owner Department</label>
    <type>Text</type>
</CustomField>