force-app/main/default/objects/Vendor_Review__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <description>Person that reviewed the vendor</description>
    <inlineHelpText>Person that reviewed the vendor</inlineHelpText>
    <label>Confirmed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>