force-app/main/default/objects/Vendor_Review__c/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <description>Do we have an RFP?</description>
    <inlineHelpText>Do we have an RFP?</inlineHelpText>
    <label>RFP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>