force-app/main/default/objects/Vendor_Review__c/fields/Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract__c</fullName>
    <description>Do we have a signed contract?</description>
    <inlineHelpText>Do we have a signed contract?</inlineHelpText>
    <label>Signed Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>