force-app/main/default/objects/Vendor_Review__c/fields/SOC__c.field-meta.xml
<CustomField>
    <fullName>SOC__c</fullName>
    <description>What type(s) of SOC are required?</description>
    <inlineHelpText>What type(s) of SOC are required?</inlineHelpText>
    <label>SOC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOC 1</fullName>
            </value>
            <value>
                <fullName>SOC 2</fullName>
            </value>
            <value>
                <fullName>SOC 3</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>