force-app/main/default/objects/Vendor_Review__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Date/time review began</description>
    <inlineHelpText>Date/time review began</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>