force-app/main/default/objects/Vendor_Review__c/fields/Term_Notice_Required__c.field-meta.xml
<CustomField>
    <fullName>Term_Notice_Required__c</fullName>
    <description>Is a term notice required for this vendor?</description>
    <inlineHelpText>Is a term notice required for this vendor?</inlineHelpText>
    <label>Term Notice Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>