force-app/main/default/objects/Vendor_Review__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Name of the vendor</description>
    <inlineHelpText>Account Name of the vendor</inlineHelpText>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose a vendor account</errorMessage>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>0121G000000bqrQQAQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Reviews</relationshipLabel>
    <relationshipName>Vendor_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>