force-app/main/default/objects/Vendor_Review__c/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract Contact</description>
    <inlineHelpText>Contract Contact</inlineHelpText>
    <label>Vendor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vendor Reviews</relationshipLabel>
    <relationshipName>Vendor_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>