force-app/main/default/objects/Vendor_Review__c/fields/Vendor_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Email__c</fullName>
    <description>Email for vendor contact</description>
    <formula>Vendor_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email for vendor contact</inlineHelpText>
    <label>Vendor Contact Email</label>
    <type>Text</type>
</CustomField>