force-app/main/default/objects/Vendor_Review__c/fields/Vendor_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Phone_Number__c</fullName>
    <description>Phone number from linked contact</description>
    <formula>Vendor_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Phone number from linked contact</inlineHelpText>
    <label>Vendor Contact Phone Number</label>
    <type>Text</type>
</CustomField>