force-app/main/default/objects/Vendor_Review__c/fields/Vendor_or_Partner__c.field-meta.xml
<CustomField>
    <fullName>Vendor_or_Partner__c</fullName>
    <label>Vendor or Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>