force-app/main/default/objects/Vendor_Review__c/fields/Vendor_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who owns this vendor review</description>
    <inlineHelpText>Who owns this vendor review?</inlineHelpText>
    <label>Vendor Owner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must choose a contact from Decimal account</errorMessage>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>0013700000JH68lAAD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vendor Reviews (Vendor Owner)</relationshipLabel>
    <relationshipName>Owned_Vendor_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>