force-app/main/default/objects/Vendor_Review__c/fields/Vendor_Review_Id_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Review_Id_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Review Id (18 Char)</label>
    <type>Text</type>
</CustomField>