force-app/main/default/objects/Vendor_Review__c/fields/Vendor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Tier__c</fullName>
    <formula>TEXT(Vendor__r.Vendor_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Tier</label>
    <type>Text</type>
</CustomField>