force-app/main/default/objects/Vendor_Review__c/fields/Vendor_Website__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Website__c</fullName>
    <description>Lookup to account.website</description>
    <formula>Vendor__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Website</label>
    <type>Text</type>
</CustomField>