force-app/main/default/objects/Vendor_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Tier__c</columns>
    <columns>Vendor_Owner__c</columns>
    <columns>Owner_Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>